# tether-core

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: logging_config.yaml  tether_config.yaml.example
scripts/: run_local_services.sh  setup_dev_env.sh
src/tethercore_engine/: __init__.py
src/tethercore_engine/agent_runtime/: __init__.py  manifest_parser.py  runner_service.py
src/tethercore_engine/agents/: __init__.py  base_agent.py
src/tethercore_engine/agents/examples/: __init__.py
src/tethercore_engine/agents/examples/calendar_mind/: __init__.py  agent.py
src/tethercore_engine/agents/examples/focus_mind/: __init__.py  agent.py
src/tethercore_engine/consent_engine/: __init__.py  service.py
src/tethercore_engine/core/: __init__.py  config_loader.py  exceptions.py
src/tethercore_engine/llm_router/: __init__.py  service.py
src/tethercore_engine/memory_graph/: __init__.py  chroma_store.py  models.py  store_interface.py  weavite_store.py
src/tethercore_engine/privacy_layer/: __init__.py  syft_service.py
src/tethercore_engine/tether_chain/: __init__.py  service.py
src/tethercore_engine/voice_interface/: __init__.py  service.py
tethercore_cli/: main.py
tethercore_cli/commands/: __init__.py  agent_cmds.py  chain_cmds.py  config_cmds.py  echo_cmds.py  llm_cmds.py
tethercore_cli/utils/: __init__.py
